--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Galerias | Ciudad de México</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="navbar-content">
+                <div class="logo">
+                    Mi sitio
+                </div>
+                <div class="menu">
+                    <a href="#">Inicio</a>
+                    <a href="#">Servicios</a>
+                    <a href="#">contacto</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+
     
+
 </body>
 </html>
