--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerias | Ciudad de México</title>
+    <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
     <header>
@@ -21,6 +22,9 @@
         </nav>
     </header>
 
+    <section>
+        
+    </section>
     
 
 </body>
