--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav-header">
             <div class="navbar-content">
                 <div class="logo">
                     Mi sitio
@@ -23,7 +23,9 @@
     </header>
 
     <section>
-        
+        <video autoplay muted loop playsinline>
+            <source src="videos/corte.mp4" type="video/mp4">
+        </video>
     </section>
     
 
