--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <section>
+    <section class="fondo1">
         <video autoplay muted loop playsinline>
             <source src="videos/corte.mp4" type="video/mp4">
         </video>
