--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
     <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
-    <header>
-        <nav class="nav-header">
-            <div class="navbar-content">
-                <div class="logo">
-                    Mi sitio
-                </div>
-                <div class="menu">
-                    <a href="#">Inicio</a>
-                    <a href="#">Servicios</a>
-                    <a href="#">contacto</a>
-                </div>
-            </div>
-        </nav>
-    </header>
 
     <section class="fondo1">
         <video autoplay muted loop playsinline>
             <source src="videos/corte.mp4" type="video/mp4">
         </video>
+        <div class="header">
+            <nav class="nav-header">
+                <div class="navbar-content">
+                    <div class="logo">
+                        Mi sitio
+                    </div>
+                    <div class="menu">
+                        <a href="#">Inicio</a>
+                        <a href="#">Servicios</a>
+                        <a href="#">contacto</a>
+                    </div>
+                </div>
+            </nav>
+        </div>  
+
     </section>
     
 
