--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <title>Galerias | Ciudad de México</title>
     <link rel="stylesheet" href="index.css" type="text/css">
 </head>
+
+
+
 <body>
 <section class="fondo1">
-    <video autoplay muted loop playsinline>
-        <source src="videos/corte.mp4" type="video/mp4">
-    </video>
+    <div class="video-container">
+        <video autoplay muted loop playsinline>
+            <source src="videos/corte.mp4" type="video/mp4">
+        </video>
+    </div>
+
     <div class="header">
         <nav class="nav-header">
             <div class="navbar-content">
                 <div class="logo">
-                    Mi sitio
+                    Galerias España
                 </div>
                 <!-- Checkbox para menú móvil -->
                 <input type="checkbox" id="menu-toggle">
