--- a/index.html
+++ b/index.html
@@ -44,9 +44,30 @@
     </div>  
 </section>
 
-<section class="fondo2">
+ <section class="parallax" id="parallax-1">
+    <div class="overlay">
+      <h1>Bienvenido al efecto Parallax</h1>
+    </div>
+  </section>
 
-</section>
+  <section class="content">
+    <h2>Sección de contenido</h2>
+    <p>
+      Este es un ejemplo de cómo crear un efecto parallax completamente responsivo con HTML y CSS. 
+      El fondo se mueve más lento que el contenido al hacer scroll.
+    </p>
+  </section>
+
+  <section class="parallax" id="parallax-2">
+    <div class="overlay">
+      <h1>Otro fondo con efecto Parallax</h1>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Tu Sitio Web</p>
+  </footer>
+
 
 
 </body>
