--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
                 <div class="menu">
                     <a href="#">Inicio</a>
+                    <a href="#">Nosotros</a>
+                    <a href="#"></a>
                     <div class="submenu">
                         <a href="#">Servicios ▾</a>
                         <div class="submenu-items">
@@ -44,9 +46,13 @@
     </div>  
 </section>
 
+<section class="nosotros">
+    <h2>Nosotros</h2>
+</section>
+
  <section class="parallax" id="parallax-1">
     <div class="overlay">
-      <h1>Bienvenido al efecto Parallax</h1>
+      <h1>Diseños a corte laser</h1>
     </div>
   </section>
 
