--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
  <section class="parallax" id="parallax-1">
     <div class="overlay">
-      <h1>Diseños a corte laser</h1>
+      <h1>Diseños Navideños</h1>
     </div>
   </section>
 
