--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
  <section class="parallax" id="parallax-1">
     <div class="overlay">
       <h1>Diseños Navideños</h1>
-      <video autoplay muted loop playsinline>
-        <source src="videos/navidad.mp4" type="video/mp4">
-      </video>
     </div>
+    <!--<video autoplay muted loop playsinline>
+          <source src="videos/navidad.mp4" type="video/mp4">
+        </video>-->
   </section>
 
   <section class="content">
