navidad-dia_muertos

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <section class="parallax" id="parallax-2">
     <div class="overlay">
-      <h1>Otro fondo con efecto Parallax</h1>
+      <h1>Dia de Muertos</h1>
     </div>
   </section>
 
