--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="#">Nosotros</a>
                     <a href="#"></a>
                     <div class="submenu">
-                        <a href="#">Servicios ▾</a>
+                        <a href="#">Artesanias ▾</a>
                         <div class="submenu-items">
                             <a href="#">Diseño Web</a>
                             <a href="#">Marketing</a>
