--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!-- Checkbox para menú móvil -->
                 <input type="checkbox" id="menu-toggle">
                 <label for="menu-toggle" class="hamburger">&#9776;</label>
-
+ 
                 <div class="menu">
                     <a href="#">Inicio</a>
                     <a href="#">Nosotros</a>
@@ -34,9 +34,9 @@
                     <div class="submenu">
                         <a href="#">Artesanias ▾</a>
                         <div class="submenu-items">
-                            <a href="#">Diseño Web</a>
-                            <a href="#">Marketing</a>
-                            <a href="#">SEO</a>
+                            <a href="#">Galeria</a>
+                            <a href="#">Navideños</a>
+                            <a href="#">Dia de Muertos</a>
                         </div>
                     </div>
                     <a href="#">Contacto</a>
@@ -46,8 +46,22 @@
     </div>  
 </section>
 
-<section class="nosotros">
+<section class="content">
     <h2>Nosotros</h2>
+    <p>
+      En Galerias España, somos apasionados por la precisión, la creatividad y el diseño. 
+      Nos especializamos en cortes y grabados láser en MDF y otros materiales, ofreciendo soluciones personalizadas 
+      para proyectos de decoración, arquitectura, diseño industrial y emprendimientos creativos.
+      <br>
+      <br>
+      Contamos con tecnología de corte láser de alta precisión que nos permite lograr acabados 
+      limpios, detalles finos y resultados consistentes en cada pieza. Nuestro objetivo es 
+      transformar tus ideas en productos únicos, combinando innovación, diseño y calidad artesanal.
+      Desde piezas decorativas y maquetas arquitectónicas hasta rótulos y souvenirs, acompañamos a cada 
+      cliente en todo el proceso: desde el diseño hasta la entrega final, asegurando un servicio rápido, confiable y a medida.
+      En Galerias España, creemos que cada corte cuenta. Por eso, cuidamos cada detalle para 
+      que el resultado sea exactamente lo que imaginabas — o incluso mejor.
+    </p>
 </section>
 
  <section class="parallax" id="parallax-1">
@@ -60,11 +74,33 @@
   </section>
 
   <section class="content">
-    <h2>Sección de contenido</h2>
-    <p>
-      Este es un ejemplo de cómo crear un efecto parallax completamente responsivo con HTML y CSS. 
-      El fondo se mueve más lento que el contenido al hacer scroll.
-    </p>
+    <h1>Nuestros Productos</h1>
+
+    <div class="productos">
+      <div class="producto">
+        <img src="producto1.jpg" alt="Producto 1">
+        <h3>Portarretrato MDF</h3>
+        <p>Diseño personalizado en corte láser.</p>
+        <span class="precio">$350</span><br>
+        <button class="btn">Agregar al carrito</button>
+      </div>
+
+      <div class="producto">
+        <img src="producto2.jpg" alt="Producto 2">
+        <h3>Letrero decorativo</h3>
+        <p>Hecho a medida con nombres o frases.</p>
+        <span class="precio">$420</span><br>
+        <button class="btn">Agregar al carrito</button>
+      </div>
+
+      <div class="producto">
+        <img src="producto3.jpg" alt="Producto 3">
+        <h3>Caja personalizada</h3>
+        <p>Ideal para regalos especiales.</p>
+        <span class="precio">$290</span><br>
+        <button class="btn">Agregar al carrito</button>
+      </div>
+    </div>
   </section>
 
   <section class="parallax" id="parallax-2">
@@ -77,7 +113,7 @@
     <p>© 2025 Tu Sitio Web</p>
   </footer>
 
-
-
 </body>
+
+<script src="script.js" defer> </script>
 </html>
