--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="productos">
       <div class="producto">
-        <img src="producto1.jpg" alt="Producto 1">
+        <img src="navidad/coronas/corona1.svg" alt="Producto 1">
         <h3>Portarretrato MDF</h3>
         <p>Diseño personalizado en corte láser.</p>
         <span class="precio">$350</span><br>
