--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="nav-header">
             <div class="navbar-content">
                 <div class="logo">
-                    <img src="fondos/logo.svg">
+                    <img src="Galerias svg/4.svg">
                 </div>
                 <!-- Checkbox para menú móvil -->
                 <input type="checkbox" id="menu-toggle">
