--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
     </p>
 </section>
 
+
+
+<!--Navidad-->
  <section class="parallax" id="parallax-1">
     <div class="overlay">
       <h1>Diseños Navideños</h1>
@@ -109,12 +112,11 @@
     <ul id="lista-carrito"></ul>
     <p id="total">Total: $0</p>
     <button id="enviar-whatsapp" class="btn">📲 Enviar pedido por WhatsApp</button>
-
   </div>
   </section>
 
 
-
+<!--Dia de muertos-->
   <section class="parallax" id="parallax-2">
     <div class="overlay">
       <h1>Dia de Muertos</h1>
@@ -157,6 +159,8 @@
   </div>
   </section>
 
+
+<!--San Valentin-->
  <section class="parallax" id="parallax-3">
     <div class="overlay">
       <h1>14 de Febrero</h1>
@@ -226,7 +230,7 @@
 
 
 
-    
+
     // 🔹 Enviar pedido por WhatsApp
 document.getElementById('enviar-whatsapp').addEventListener('click', () => {
   if (carrito.length === 0) {
@@ -234,7 +238,7 @@ document.getElementById('enviar-whatsapp').addEventListener('click', () => {
     return;
   }
 
-  const telefono = "5215512345678"; // ← Cambia por tu número en formato internacional (sin +)
+  const telefono = "5215578392214"; // ← Cambia por tu número en formato internacional (sin +)
   let mensaje = "🧾 *Nuevo pedido desde Galerías YAS*%0A%0A";
 
   carrito.forEach((producto, i) => {
